overlooking all files again for Joomla online modification

--- a/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/admin/defaults/sidebar/settings.json
+++ b/com_easysocial_full_pro_1/setup/packages/com_easysocial_1.4.7_component_pro/admin/defaults/sidebar/settings.json
@@ -159,6 +159,16 @@
 			}
 		},
 		{
+			"title"	: "COM_EASYSOCIAL_MENU_ITEM_SETTINGS_PROJECTS",
+			"class"	: "",
+			"url"	:
+			{
+				"view"	: "settings",
+				"layout": "form",
+				"page"	: "projects"
+			}
+		},
+		{
 			"title"	: "COM_EASYSOCIAL_MENU_ITEM_SETTINGS_GROUPS",
 			"class"	: "",
 			"url"	:
